--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
             <version>3.26.3</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.17.2</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -40,7 +46,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>ru.kovalev.boxesloader.BoxesLoaderApplication</mainClass>
+                            <mainClass>ru.kovalev.boxesloader.BoxesLoaderRunner</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
