--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.kovalev</groupId>
-    <artifactId>ConsoleBoxes</artifactId>
+    <artifactId>boxes-app</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -45,7 +45,7 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j-impl</artifactId>
-            <version>2.20.0</version>
+            <version>2.24.1</version>
         </dependency>
     </dependencies>
 
@@ -59,7 +59,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>ru.kovalev.boxesloader.BoxesLoaderRunner</mainClass>
+                            <mainClass>ru.kovalev.boxesapp.BoxesApplication</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
