--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.kovalev</groupId>
-    <artifactId>boxes-app</artifactId>
+    <artifactId>boxDtos-app</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -44,6 +44,19 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <version>3.3.3</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <version>3.3.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.1.214</version>
+            <scope>runtime</scope>
         </dependency>
 
         <dependency>
